@@ -1,3 +1,8 @@
+2010-05-15  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/44148
+	* pt.c (tsubst): Unshare template argument.
+
 2010-05-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR c++/44062
